--- a/config.yaml
+++ b/config.yaml
@@ -14,6 +14,7 @@ artifacts:
   model_dir: model
   model_name: model.h5
   plot_dir: plots
+  plot_name: plot.png
   checkpoint_dir: checkpoints
 
 logs:
