--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,5 @@
 params:
-  epochs: 1
+  epochs: 30
   batch_size: 32
   no_classes: 10
   input_shape: [28,28]
@@ -7,6 +7,8 @@ params:
   metrics: accuracy
   optimizer: SGD
   validation_datasize: 5000
+  patience: 5
+  restore_best_weights: True
 
 
 artifacts:
